inclusao do arquivo css

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 p {text-align: center; font-size: 20 px;
 background: #ffd900}
 
-H1 {font-size : 50px; font-align ; center; background: #ccc}
-body{background: #ccc}
+H1 {font-size : 50 px; font-align: center: background: #ccc}
+body{background: #e00707}
