inclusao de coisas

--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 p {text-align: center; font-size: 20 px;
 background: #ffd900}
 
-H1 {font-size : 50 px; font-align: center: background: #ccc}
+H1 {font-size : 50 px; font-alig: center; background: #ccc}
 body{background: #e00707}
+#Pensamento-Computacional{
+
+}
